objects/LLC_BI__Account_Collateral__c.object
<CustomObject>
    <fields>
        <fullName>LLC_BI__Account__c</fullName>
        <description>This field is a lookup to the collateral record owner&apos;s Account (Relationship).</description>
        <label>Relationship</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Collateral Owned</relationshipLabel>
        <relationshipName>Account_Collateral</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Collateral_Association__c</fullName>
        <description>How the entity is associated to the collateral</description>
        <inlineHelpText>How the entity is associated to the collateral</inlineHelpText>
        <label>Collateral Association</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Owner</fullName>
                    <default>true</default>
                    <label>Owner</label>
                </value>
                <value>
                    <fullName>Construction</fullName>
                </value>
                <value>
                    <fullName>Landlord</fullName>
                </value>
                <value>
                    <fullName>Lessee</fullName>
                </value>
                <value>
                    <fullName>Lessor</fullName>
                </value>
                <value>
                    <fullName>Lienholder</fullName>
                </value>
                <value>
                    <fullName>Tenant</fullName>
                </value>
                <value>
                    <fullName>Buyer</fullName>
                </value>
                <value>
                    <fullName>Seller</fullName>
                </value>
                <value>
                    <fullName>Trustee</fullName>
                </value>
                <value>
                    <fullName>Assignee</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Collateral__c</fullName>
        <description>This field is lookup to the collateral record owned by the Account (relationship).</description>
        <label>Collateral</label>
        <referenceTo>LLC_BI__Collateral__c</referenceTo>
        <relationshipLabel>Relationships</relationshipLabel>
        <relationshipName>Account_Collateral</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LLC_BI__End_Date__c</fullName>
        <description>The end date of the collateral ownership.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The end date of the collateral involvement</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Ownership_Percentage__c</fullName>
        <description>The percentage of the collateral that the relationship owns.</description>
        <inlineHelpText>The percentage of the collateral that the relationship owns</inlineHelpText>
        <label>Ownership Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Pledging_Authority__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Does the Relationship have authority to pledge this collateral</description>
        <inlineHelpText>Does the Relationship have authority to pledge this collateral</inlineHelpText>
        <label>Pledging Authority</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Primary_Owner__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field designates whether this is the primary owner of a piece of collateral.</description>
        <inlineHelpText>This field designates whether this is the primary owner of a piece of collateral.</inlineHelpText>
        <label>Primary Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Relationship_Type__c</fullName>
        <description>This is the Relationship Type.</description>
        <formula>TEXT(LLC_BI__Account__r.Type)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Relationship Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Start_Date__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <description>The start date of the collateral ownership.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The start date of the collateral ownership.</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Collateral Ownership</label>
    <nameField>
        <displayFormat>AC-{00000}</displayFormat>
        <label>Relationship Collateral Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Collateral Ownership</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>